openscore-core/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openscore-core
  namespace: openscore
  annotations:
    cert-manager.io/issuer: "openscore-issuer"
    kubernetes.io/ingress.class: nginx
spec:
  selector:
    matchLabels:
      app: openscore-core
  replicas: 1
  template:
    metadata:
      labels:
        app: openscore-core
    spec:
      containers:
        - name: core
          image: registry.digitalocean.com/openscore/openscore-core:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
