openscore-core/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openscore-core
  namespace: openscore
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: openscore-core
