openscore-core/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openscore-core
  namespace: openscore
  annotations:
    kubernetes.io/ingress.class:  nginx
spec:
  ingressClassName: nginx
  rules:
    - host: rhopenscore.com
      http:
        paths:
          - path: /api/rest
            pathType: Prefix
            backend:
              service:
                name: openscore-core
                port:
                  number: 8080
    - host: www.rhopenscore.com
      http:
        paths:
          - path: /api/rest
            pathType: Prefix
            backend:
              service:
                name: openscore-core
                port:
                  number: 8080
